# internal/api/v1/handlers/otp/types.go
@@ -8,7 +8,6 @@ import (
 type GenerateOTPRequest struct {
 	PhoneNumber string `json:"phone_number" example:"+237123456780" validate:"required"`
 	Platform    string `json:"platform" example:"wa" validate:"required"`
-	DeviceID    string `json:"device_id" example:"+237123456789" validate:"required"`
 }
 
 // GenerateOTPResponse represents the response after generating an OTP
@@ -21,7 +20,6 @@ type GenerateOTPResponse struct {
 type VerifyOTPRequest struct {
 	PhoneNumber string `json:"phone_number" example:"+237123456780" validate:"required"`
 	Platform    string `json:"platform" example:"wa" validate:"required"`
-	DeviceID    string `json:"device_id" example:"+237123456789" validate:"required"`
 	Code        string `json:"code" example:"123456" validate:"required"`
 }
 
