# internal/api/v1/handlers/platforms/types.go
@@ -4,14 +4,8 @@ import (
 	"authy-api/internal/database"
 )
 
-// Platform represents a platform with its device ID
-type Platform struct {
-	Platform string `json:"platform" example:"wa"`
-	DeviceID string `json:"device_id" example:"+237123456789"`
-}
-
 // ListPlatformsResponse represents the response for listing platforms
-type ListPlatformsResponse []Platform
+type ListPlatformsResponse []string
 
 // ErrorResponse represents an error response
 type ErrorResponse struct {
